# NativeRoad

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jyn/nativeroad/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jyn/nativeroad/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jyn/nativeroad/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jni/src/androidTest/java/com/jyn/jni/: ExampleInstrumentedTest.java
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: CMakeLists.txt  jni.cpp
jni/src/main/java/com/jyn/jni/: NativeLib.java
jni/src/test/java/com/jyn/jni/: ExampleUnitTest.java
